etcd: update to v3.5.9
Signed-off-by: Luca Burgazzoli <lburgazzoli@gmail.com>